# bazel-example

./: Dockerfile  MODULE.bazel  README.md  WORKSPACE
